some edits to intro and frontmatter

--- a/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
+++ b/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
@@ -1,8 +1,8 @@
 ---
-title: Various Formal Methods for Creating Correct Smart Contracts
+title: Various Formal Methods Technologies for Creating Correct Smart Contracts
 datePublished: "2025-03-30"
 author: Tom Latham
-description: description: An exploration of formal methods for creating correct smart contracts from the perspective of a learner.
+description: description: An exploration of formal methods technologies employed in creating correct smart contracts, from the perspective of a learner.
 tags: ["math", "programming", "formal methods", "blockchain"]
 ---
 
@@ -12,16 +12,16 @@ I recently learned about the field of formal verification, which roughly speakin
 using mathematics (i.e., formal methods) to ensure the correct operation of systems. For systems
 where it's obviously paramount to "get it right on the first try," such as building a bridge or
 spaceship, I think it's perhaps equally obvious that you'll want to employ mathematics in the
-development process to make sure you don't have any critical issues in your finished product. In
-these cases, the field of formal methods is probably pretty baked into the engineering process. For
-less critical systems, though, like most software applications, the idea of using math to rigorously
-route out any bugs before releasing to production is more of a foreign concept and probably a waste
-of resources in most cases — unit testing, integration testing, manual testing and other forms of
-software testing usually are sufficient for that purpose.
+development process to make sure you don't have any issues in your finished product. In these cases,
+the field of formal methods is probably pretty baked into the engineering process. For less critical
+systems, though, like most software applications, the idea of using math to rigorously route out any
+bugs before releasing to production is more of a foreign concept and probably a waste of resources
+in most cases — unit testing, integration testing, manual testing and other forms of software
+testing usually are sufficient for that purpose.
 
 There does exist a non-empty intersection between the set of systems with a high degree of "get it
 right on the first try"-ness and the set of systems which are software applications, however, and
-one such element in that intersection is smart contract development. Indeed, as of the time of
+one such element in that intersection is the creation of smart contracts. Indeed, as of the time of
 writing this, there are many companies such as Cardano, FinProof and Informal Systems, which are
 using formal methods in blockchain development.
 
