fixing the post's frontmatter and implementing simple toc highlighter

--- a/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
+++ b/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
@@ -2,7 +2,9 @@
 title: Various Formal Methods Technologies for Creating Correct Smart Contracts
 datePublished: "2025-03-30"
 author: Tom Latham
-description: description: An exploration of formal methods technologies employed in creating correct smart contracts, from the perspective of a learner.
+description:
+  An exploration of formal methods technologies employed in creating correct smart contracts, from
+  the perspective of a learner.
 tags: ["math", "programming", "formal methods", "blockchain"]
 ---
 
