--- a/src/content/posts/pe-even-fibonacci-numbers-2/pe-even-fibonacci-numbers-2.mdx
+++ b/src/content/posts/pe-even-fibonacci-numbers-2/pe-even-fibonacci-numbers-2.mdx
@@ -3,7 +3,7 @@ title: "Project Euler | Problem #2 | Even Fibonacci Numbers | Post #2"
 datePublished: "2025-03-30"
 author: Tom Latham
 description:
-  .A neat pattern in the sequence of even Fibonacci numbers, and proving it with the help of the
+  A neat pattern in the sequence of even Fibonacci numbers, and proving it with the help of the
   result from the previous post in the series.
 tags: ["math", "programming"]
 ---
