changing direction of post and finding three examples

--- a/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
+++ b/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
@@ -1,5 +1,5 @@
 ---
-title: Various Formal Methods Technologies for Creating Correct Smart Contracts
+title: Various Applications of Formal Methods for Creating Correct Smart Contracts
 datePublished: "2025-03-30"
 author: Tom Latham
 description:
@@ -35,10 +35,20 @@ formal methods to verify my program for
 case, I've decided that I want to dive into this promising world that combines proofs and software
 correctness, and this post is a written record of that leap off the metaphorical diving board.
 
-So, without further ado, let's explore some of the technologies that are being used today by formal
-methods engineers to ensure the correct operation of smart contracts.
+So, without further ado, let's explore some examples of how formal methods are currently being
+applied in the space of blockchain development.
 
-# Technologies
+# The Coq Proof Assistant and the Tezos blockchain
+
+https://opentezos.com/formal-verification
+
+# Formal Methods at Cardano
+
+https://iohk.io/en/blog/posts/2024/11/26/applying-formal-methods-at-input-output-real-world-examples/
+
+# Formal Methods for Ethereum
+
+https://ethereum.org/en/developers/docs/smart-contracts/formal-verification/#formal-verification-tools
 
 # Conclusion
 
