--- a/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
+++ b/src/content/posts/exploring-proof-writing-for-blockchain/exploring-proof-writing-for-blockchain.mdx
@@ -11,9 +11,9 @@ tags: ["math", "programming", "formal methods", "blockchain"]
 # Introduction
 
 I recently learned about the field of formal verification, which roughly speaking is the field of
-using mathematics (i.e., formal methods) to ensure the correct operation of systems. For systems
-where it's obviously paramount to "get it right on the first try," such as building a bridge or
-spaceship, I think it's perhaps equally obvious that you'll want to employ mathematics in the
+using mathematical tools (i.e., formal methods) to ensure the correct operation of systems. For
+systems where it's obviously paramount to "get it right on the first try," such as building a bridge
+or spaceship, I think it's perhaps equally obvious that you'll want to employ mathematics in the
 development process to make sure you don't have any issues in your finished product. In these cases,
 the field of formal methods is probably pretty baked into the engineering process. For less critical
 systems, though, like most software applications, the idea of using math to rigorously route out any
@@ -24,8 +24,8 @@ testing usually are sufficient for that purpose.
 There does exist a non-empty intersection between the set of systems with a high degree of "get it
 right on the first try"-ness and the set of systems which are software applications, however, and
 one such element in that intersection is the creation of smart contracts. Indeed, as of the time of
-writing this, there are many companies such as Cardano, FinProof and Informal Systems, which are
-using formal methods in blockchain development.
+writing this, there are many companies such as Tezos, Cardano and Ethereum, which are using formal
+methods in blockchain development.
 
 This is really exciting to me because (a.) I'm a huge fan of proving things mathematically and (b.)
 I also find it really satisfying to make sure software works correctly (I started my tech career in
