rough outline of start of curriculum

--- a/src/content/posts/formal-methods-blockchain-curriculum/formal-methods-blockchain-curriculum.mdx
+++ b/src/content/posts/formal-methods-blockchain-curriculum/formal-methods-blockchain-curriculum.mdx
@@ -7,3 +7,17 @@ description:
   proof engineer.
 tags: ["math", "programming", "formal methods", "blockchain"]
 ---
+
+1. The Tezos Scientist path: https://opentezos.com/paths/
+
+- gets you versed in blockchain basics, a language for smart contracting
+- this sets the stage for allowing the _application_ for formal verification
+- then this touches on formal verification
+
+2. The Curry-Howard Correspondence:
+   https://www.youtube.com/watch?v=GdcOy6zVFC4&ab_channel=MichaelRyanClarkson
+
+- how this all works -- you can't prove programs without this
+- it looks really cool
+
+3. idk what's next
