adding todo to week1 post

--- a/src/content/posts/wiltw-fm-learning-path/wiltw-fm-learning-path.mdx
+++ b/src/content/posts/wiltw-fm-learning-path/wiltw-fm-learning-path.mdx
@@ -45,6 +45,8 @@ between Proof Theory and Type Theory, often summarized as "Proofs are programs."
 groundwork for both of those areas, covering different logics in proof theory and the corresponding
 types.
 
+[//]: # "TODO: Talk about *why* this text and the topics it covers are good as a theoretical start."
+
 ## Application
 
 I'm going to study
